Changes for 1.6.2

 - [ZBX-620] fixed jstree error in IT Services (Artem)
 - [ZBX-619] fixed agent crash for system.uptime under Solaris 2.5.1 (Sasha)
 - [ZBX-618] fixed cast problem with oracle9 (Artem)
 - [ZBX-613] fixed possible incorrect evaluating of trigger functions if using dbcache (Sasha)
 - [ZBX-610] fixed memory leak in external checks (Sasha)
 - [DEV-254] improved server side logging (Sasha)
 - [ZBX-602] fixed possible incorrect trigger evaluation if value sotred as "delta" (Sasha)
 - [DEV-268] added support of net.if.in/out/total under AIX (Sasha)
 - [DEV-268] added support of system.cpu.num/util/load/intr/switches, system.uptime under AIX (Sasha)
 - [ZBX-595] improved performance of export screen (Artem)
 - [DEV-269] added permission check when sending notifications (Sasha)
 - [DEV-270] improved trigger configuration view; error string moved to description column (Sasha)
 - [DEV-263] added support of a new map element - simple image (Alexei)
 - [DEV-260] support of macro TRIGGER.NSEVERITY (Alexei)
 - [DEV-255] added support of #num for function last() (Sasha)
 - [ZBX-593] fixed stop escalations if action is disabled (Sasha)
 - [ZBX-592] fixed incorrect {TRIGGER.STATUS} value in recovery message (Sasha)
 - [DEV-250] added support of vm.memory.size under AIX (Sasha)
 - [DEV-250] added full support of proc.num/mem under Linux 2.4/2.6, Solaris and AIX (Sasha)
 - [ZBX-588] fixed undefined variable in trigger status page (Artem)
 - [ZBX-587] fixed LDAP test functionality (Artem)

Changes for 1.6.1

 - [ZBX-586] added simple check tcp_perf into help_items (Sasha)
 - [ZBX-585] added support of macros {HOSTNAME},{HOST.CONN},{IPADDRESS},{HOST.DNS} in item keys (Sasha)
 - [DEV-250] added support of vfs.dev.read/write under Linux 2.4/2.6 (Sasha)
 - [ZBX-576] added IPMI authentication algorithms (Sasha)
 - [ZBX-573] made SQL optimization for PGSQL (Artem)
 - [ZBX-572] fixed warning messages while updating template linkage (Sasha)