@@ -345,6 +345,7 @@ upgrades/dbpatches/1.6/postgresql/patch/drules.sql -text
 upgrades/dbpatches/1.6/postgresql/patch/escalations.sql -text
 upgrades/dbpatches/1.6/postgresql/patch/events.sql -text
 upgrades/dbpatches/1.6/postgresql/patch/graphs.sql -text
+upgrades/dbpatches/1.6/postgresql/patch/graphs_items.sql -text
 upgrades/dbpatches/1.6/postgresql/patch/history_log.sql -text
 upgrades/dbpatches/1.6/postgresql/patch/hosts.sql -text
 upgrades/dbpatches/1.6/postgresql/patch/hosts_profiles_ext.sql -text
