@@ -1,0 +1,1 @@
+CREATE INDEX graphs_items_1 on graphs_items (itemid);
