@@ -1,5 +1,6 @@
 Changes for 1.6.2
 
+ - [ZBX-621] fixed bad performance of the graph related screen due to missing index (Alexei)
  - [ZBX-620] fixed jstree error in IT Services (Artem)
  - [ZBX-619] fixed agent crash for system.uptime under Solaris 2.5.1 (Sasha)
  - [ZBX-618] fixed cast problem with oracle9 (Artem)
